# agent-core

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
agent_core/: README.md  __init__.py  context_assembler.py  domain_hooks.py  execution_context.py  investigation_controller.py  investigation_models.py  investigation_prompts.py  investigation_state.py  logging_utils.py  orchestrator.py  policy_engine.py  prompt_builder.py  prompt_repository.py  run_options.py  run_trace.py  session_manager.py  session_repo.py  settings.py  structured_synthesizer.py  structured_tasks.py  tool_registry.py  tools.py  turn_steps.py  types.py
agent_core/llm/: azure_anthropic_provider.py  azure_openai_provider.py  base.py  errors.py  openai_compat.py  openai_provider.py  openai_request_policy.py  provider_factory.py
agent_core/memory/: __init__.py  context_block.py  history_compactor.py  session_summary.py  task_state.py  thread_state.py
agent_core/specialists/: __init__.py  registry.py  runner.py  types.py
docs/: investigation_modes.md
examples/: README.md  pending_tool_resume.py  quickstart.py
tests/: test_azure_anthropic_provider.py  test_examples.py  test_investigation_modes.py  test_openai_reasoning_fallback.py  test_pending_resume_flow.py  test_provider_options.py  test_public_api.py  test_run_options_and_privacy.py  test_run_trace.py  test_session_repo.py  test_structured_tasks.py  test_tool_registry.py
