[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-core"
version = "0.1.0"
description = "Generic LLM orchestration runtime for tool-using AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Agent Core Contributors"}
]
keywords = ["agent", "llm", "tools", "orchestration", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "openai>=1.30.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Repository = "https://github.com/maxDcb/agent-core"
Documentation = "https://github.com/maxDcb/agent-core#readme"
Issues = "https://github.com/maxDcb/agent-core/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent_core*"]

[tool.setuptools.package-data]
agent_core = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
